<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/contentBodyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            style="@style/viewParent.headerText"
            android:text="@string/setting" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileCircleImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="#88abb1"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/usernameTextView"
                style="@style/viewParent.headerText"
                android:text="Meow"
                android:textStyle="bold"

                android:textSize="18sp"
                android:layout_toRightOf="@id/profileCircleImageView"
                android:layout_marginTop="20dp"/>

            <TextView
                style="@style/viewParent.headerText"
                android:text="@string/edit_personal_detail"
                android:textSize="16sp"
                android:textColor="#5D5C5C"
                android:layout_below="@id/usernameTextView"
                android:layout_toRightOf="@id/profileCircleImageView"/>

            <ImageView
                style="@style/viewParent"
                android:src="@drawable/ic_more"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <Switch
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:drawableLeft="@drawable/ic_dark_mode"
            android:text="@string/dark_mode" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Profile"/>

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_edit_profile"
            android:id="@+id/edit_profile"
            android:text="@string/edit_profile" />
        <TextView
            android:id="@+id/payment"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_payments"
            android:text="@string/banking_account" />

        <TextView
            android:id="@+id/qr_code"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/qr_code"
            android:text="Qr Parking" />

        <TextView
            android:id="@+id/history"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/history"
            android:text="@string/history" />



        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/notifi"/>

        <Switch
            android:checked="true"
            android:id="@+id/notification"
            style="@style/settingsText"
            android:drawableLeft="@drawable/ic_notifications"
            android:text="@string/notifi" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"

            android:text="@string/other"/>

        <TextView
            android:id="@+id/language"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_languages"
            android:text="@string/language" />

        <TextView
            style="@style/viewParent.headerText.settingsTextIcon"
            android:drawableLeft="@drawable/ic_logout"
            android:id="@+id/logout"
            android:text="@string/logout" />




    </LinearLayout>
</ScrollView>