<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/white"
    android:orientation="vertical"
    tools:context=".RegisterAcitivy">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="#0b42ab"
        app:civ_border_width="3dp"
        app:civ_border_color="#0024ff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="130dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textColor="#0024ff"
        android:text="@string/information"
        android:textSize="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Email"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtemail"
            android:focusable="false"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="2dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtname"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="@string/names" />
    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:buttonTint="#88abb1"
        android:id="@+id/radiogroup"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#0024ff"

            android:text="@string/male"
            android:onClick="checkButton"/>
        <RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:buttonTint="#0024ff"
            android:onClick="checkButton"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"
        app:boxStrokeWidth="2dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtbirthday"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/cake"
            android:drawablePadding="12dp"
            android:layout_height="wrap_content"
            android:hint="@string/birthday" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/mtrl_textinput_default_box_stroke_color"

        >
        <AutoCompleteTextView
            android:id="@+id/txtmajor"
            android:drawableStart="@drawable/school"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/major"

            />


    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/background_button_ghost"
            android:id="@+id/btnlogout"
            android:textColor="#0024ff"
            android:text="Back" />

        <Button
            android:id="@+id/btnnext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#0024ff"
            android:text="Next" />
    </LinearLayout>

</LinearLayout>